remove  infos/statistics route
