# src/app/config/middleware/swagger.json
@@ -245,127 +245,6 @@
         }
       }
     },
-    "/infos/statistics": {
-      "get": {
-        "tags": ["infos"],
-        "summary": "Obter informações da horta",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Lista de informações da horta",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "temperature": {
-                      "type": "object",
-                      "example": {
-                        "mean": 47,
-                        "mode": [50],
-                        "median": 36.5,
-                        "standardDeviation": 44.873154558154255,
-                        "skewness": 0.9678542073070054,
-                        "kurtosis": -0.7358239892450049
-                      }
-                    },
-                    "soilMoisture": {
-                      "type": "object",
-                      "example": {
-                        "mean": 47,
-                        "mode": [50],
-                        "median": 36.5,
-                        "standardDeviation": 44.873154558154255,
-                        "skewness": 0.9678542073070054,
-                        "kurtosis": -0.7358239892450049
-                      }
-                    },
-                    "airMoisture": {
-                      "type": "object",
-                      "example": {
-                        "mean": 47,
-                        "mode": [50],
-                        "median": 36.5,
-                        "standardDeviation": 44.873154558154255,
-                        "skewness": 0.9678542073070054,
-                        "kurtosis": -0.7358239892450049
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Error 401 - Unauthorized",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "number",
-                      "format": "int32",
-                      "example": 401
-                    },
-                    "mensagem": {
-                      "type": "string",
-                      "example": "No token provided"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Error 500 - Internal server error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "number",
-                      "format": "int32",
-                      "example": 500
-                    },
-                    "mensagem": {
-                      "type": "string",
-                      "example": "The server encountered an internal error while processing the request."
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error 404 - Not Found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "number",
-                      "format": "int32",
-                      "example": 404
-                    },
-                    "mensagem": {
-                      "type": "string",
-                      "example": "No token provided"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/users": {
       "get": {
         "tags": ["users"],
